# mast_contributor_tools

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  __main__.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
TUTORIAL/: README.md  tutorial_file_list.txt  tutorial_readme.md
docs/: cli.rst  conf.py  filename_check_readme.md  index.rst  sqlite_readme.md  tutorial_readme.md
docs/api/: mast_contributor_tools.filename_check.rst  mast_contributor_tools.metadata_check.rst  mast_contributor_tools.rst  mast_contributor_tools.utils.rst  modules.rst
envs/: mct_env.yml
licenses/: LICENSE.rst
mast_contributor_tools/: __init__.py  __main__.py  mast_cli.py
mast_contributor_tools/filename_check/: README.md  __init__.py  __main__.py  config.yaml  fc_app.py  fc_config.yaml  fc_db.py  filename_check.md  hlsp_filename.py  oif.yaml
mast_contributor_tools/metadata_check/: __init__.py
mast_contributor_tools/tests/: test_hlsp_filename.py
mast_contributor_tools/tests/filename_check/: test_fc_app.py  test_fc_db.py  test_hlsp_filename.py
mast_contributor_tools/tests/mast_cli/: test_mast_cli.py
mast_contributor_tools/utils/: __init__.py  logger_config.py
profiling/: README.txt  example_script.py  profile_mct.sh  profiling_phast.txt  profiling_relics.txt  profiling_scylla.txt  profiling_smiles.txt  profiling_t16.txt
